--- a/client/src/pages/Group/Chats/chats.module.css
+++ b/client/src/pages/Group/Chats/chats.module.css
@@ -168,6 +168,7 @@
     h3>a {
         font-size: 1rem;
         font-weight: 600;
+        text-wrap: nowrap;
     }
 
     .members {
